globus-xio-udt-driver (1.27-1+gt6.@distro@) @distro@; urgency=low

  * Don't force static build

 -- Globus Toolkit <support@globus.org>  Tue, 25 Apr 2017 15:01:12 -0400

globus-xio-udt-driver (1.26-1+gt6.@distro@) @distro@; urgency=low

  * Fix build failure on mingw with gcc 5.4.0

 -- Globus Toolkit <support@globus.org>  Wed, 21 Dec 2016 10:53:33 -0500

globus-xio-udt-driver (1.25-2+gt6.@distro@) @distro@; urgency=low

  * Fix multiarch _libdir

 -- Globus Toolkit <support@globus.org>  Fri, 14 Oct 2016 11:42:26 -0400

globus-xio-udt-driver (1.25-1+gt6.@distro@) @distro@; urgency=low

  * pull udt tarball from globus repo

 -- Globus Toolkit <support@globus.org>  Wed, 05 Oct 2016 14:06:16 -0500

globus-xio-udt-driver (1.24-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:44 -0400

globus-xio-udt-driver (1.23-1+gt6.@distro@) @distro@; urgency=low

  * More feature tests for libnice

 -- Globus Toolkit <support@globus.org>  Thu, 02 Jun 2016 17:10:38 -0400

globus-xio-udt-driver (1.22-1+gt6.@distro@) @distro@; urgency=low

  * Allow building using the RHEL 6 version of libnice

 -- Globus Toolkit <support@globus.org>  Thu, 02 Jun 2016 13:24:33 -0400

globus-xio-udt-driver (1.21-1+gt6.@distro@) @distro@; urgency=low

  * add GLOBUS_XIO_UDT_STUNSERVER env override

 -- Globus Toolkit <support@globus.org>  Wed, 25 May 2016 13:59:37 -0500

globus-xio-udt-driver (1.20-2+gt6.@distro@) @distro@; urgency=low

  * Update debian dependencies

 -- Globus Toolkit <support@globus.org>  Thu, 28 Apr 2016 07:26:56 -0400

globus-xio-udt-driver (1.20-1+gt6.@distro@) @distro@; urgency=low

  * Don't configure glib2 during unpack

 -- Globus Toolkit <support@globus.org>  Wed, 27 Apr 2016 17:22:52 -0400

globus-xio-udt-driver (1.19-3+gt6.@distro@) @distro@; urgency=low

  * Rename binary package from libglobus-xio-gridftp-driver1 to
    libglobus-xio-gridftp-driver since it is an unversioned shared object
