@@ -1,0 +1,4 @@
+#! /usr/bin/dh-exec
+
+usr/include/globus/*.h
+usr/lib/*/pkgconfig/*.pc
