@@ -1,168 +1,32 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
 
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-MAKEFLAGS += -j$(NUMJOBS)
-endif
-
-include /usr/share/quilt/quilt.make
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
 
 name = globus-xio-udt-driver
-_name = globus_xio_udt_driver
-version = 1.27
-soname = 0
-
-INSTALLDIR = $(CURDIR)/debian/tmp
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-
 _prefix = /usr
 _bindir = $(_prefix)/bin
 _sbindir = $(_prefix)/sbin
+_sysconfdir = /etc
 _includedir = $(_prefix)/include
-_libdir = $(_prefix)/lib/$(DEB_HOST_MULTIARCH)
 _datadir = $(_prefix)/share
 _mandir = $(_datadir)/man
 _docdir = $(_datadir)/doc
 
-DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
+override_dh_auto_configure:
+	dh_auto_configure -- \
+	    --sysconfdir=$(_sysconfdir) \
+	    --enable-silent-rules \
+	    --docdir='$(_docdir)/lib$(name)' \
+	    --includedir='$(_includedir)/globus' \
+	    --datadir='$(_datadir)/globus' \
+	    --libexecdir='$(_datadir)/globus' \
+	    --disable-static
 
-sed: sed-stamp
-	:
-
-sed-stamp: $(QUILT_STAMPFN)
-	dh_testdir
-
-	touch $@
-
-unsed: cleanup
-	dh_testdir
-
-	rm -f sed-stamp
-
-configure: configure-stamp
-	:
-
-configure-stamp: sed-stamp
-	dh_testdir
-
-	autoreconf -if
-
-	for f in config.sub config.guess ; do \
-	  if [ -e /usr/share/misc/$$f -a ! -e $$f.dist ] ; then \
-	    mv build-aux/$$f $$f.dist ; \
-	    cp -f /usr/share/misc/$$f build-aux/$$f ; \
-	  fi ; \
-	done
-
-	./configure \
- 	   --host=$(DEB_HOST_GNU_TYPE) \
-	   --build=$(DEB_BUILD_GNU_TYPE) \
-	   --prefix=$(_prefix) \
-	   --docdir='$(_docdir)/lib$(name)-dev' \
-	   --includedir='$(_includedir)/globus' \
-	   --datadir='$(_datadir)/globus' \
-	   --libdir='$(_libdir)' \
-	   --libexecdir='$(_datadir)/globus' \
-	   --disable-static
-
-	touch $@
-
-build: build-stamp
-	:
-
-build-stamp: configure-stamp
-	dh_testdir
-
-	$(MAKE) 
-
-	touch $@
-
-unpatch: unsed
-
-clean: unpatch
-	:
-
-cleanup:
-	dh_testdir
-	dh_testroot
-
-	if [ -r Makefile ] ; then $(MAKE) distclean ; fi
-
-	for f in config.sub config.guess ; do \
-	  if [ -e $$f.dist ] ; then \
-	    mv -f $$f.dist build-aux/$$f ; \
-	  fi ; \
-	done
-
-	# Remove autogenerated files
-	rm -f aclocal.m4
-	rm -f configure
-	rm -f config.guess
-	rm -f config.sub
-	rm -f ltmain.sh
-	rm -f mkinstalldirs
-
-	rm -f pkgdata/Makefile.am
-	rm -f pkgdata/*.filelist
-	rm -f pkgdata/*.gpt
-	rm -f pkgdata/*.pc
-	rm -f globus_automake*
-	rm -rf autom4te.cache
-
-	find . -name Makefile.in -exec rm {} ';'
-
-	rm -f build-stamp configure-stamp
-
-	dh_clean debian/*.install
-
-install: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-
-	$(MAKE) install DESTDIR=$(INSTALLDIR)
-	# Remove libtool archives (.la files)
-	find $(INSTALLDIR)$(_libdir) -name 'lib*.la' -exec rm -v '{}' \;
-	# Generate package filelists
-	ls -1 \
-	  debian/tmp$(_libdir)/libglobus*.so* \
-	  debian/tmp$(_docdir)/lib$(name)-dev/GLOBUS_LICENSE \
-	  > debian/lib$(name).install
-	if [ -f debian/tmp$(_libdir)/globus/libudt.so ]; then \
-	  ls -1 debian/tmp$(_libdir)/globus/libudt.so \
-	      >> debian/lib$(name).install; \
-	fi
-	ls -1 debian/tmp$(_includedir)/globus/*.h \
-	  debian/tmp$(_libdir)/pkgconfig/*.pc \
-	  > debian/lib$(name)-dev.install
-
-
-binary-indep:
-	:
-
-binary-arch: install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_install --fail-missing
-	dh_installman
-	dh_link
+override_dh_strip:
 	dh_strip --dbg-package=lib$(name)-dbg
-	dh_compress -X .tag
-	dh_fixperms
-	dh_perl
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps -l debian/lib$(name)/usr/lib
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
 
-binary: binary-indep binary-arch
-	:
+%:
+	dh $@ --with autotools-dev
 
-.PHONY: build clean binary-indep binary-arch binary install configure
+.PHONY: override_dh_auto_configure override_dh_strip
