@@ -1,3 +1,9 @@
+globus-xio-udt-driver (1.28-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix Glib build
+
+ -- Globus Toolkit <support@globus.org>  Mon, 26 Jun 2017 14:09:19 -0400
+
 globus-xio-udt-driver (1.27-1+gt6.@distro@) @distro@; urgency=low
 
   * Don't force static build
